objects/Zendesk__Zendesk_Widget_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Entity_Fields__c</fullName>
        <label>Entity Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Organization_Name_Field__c</fullName>
        <label>Organization Name Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__User_Email_Field__c</fullName>
        <label>User Email Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Widget Config</label>
    <nameField>
        <label>Widget Config Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Widget Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>